# homebase

./: .gitignore  README.md
backend/: main_flask.py  pyproject.toml
interface/: package.json
