[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interface"
version = "0.1.0"
description = "A simple Flask backend API"
authors = [{name = "Gerhard Müller", email = "gerhard1132@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["flask", "api", "backend"]
requires-python = ">=3.11"

# Dependencies (used when building a package, optional if just running locally)
dependencies = [
    "flask>=2.3.3",
    "flask-cors>=6.0.1",
    "waitress==3.0.2"
]

[project.scripts]
runb = "main_flask:main"